-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2026-08-02T08:25:25.469Z

CREATE SCHEMA "kaspers";

CREATE TYPE "kaspers"."product_status" AS ENUM (
  'active',
  'sold',
  'discontinued',
  'archived'
);

CREATE TYPE "kaspers"."attribute_data_type" AS ENUM (
  'text',
  'number',
  'boolean',
  'date'
);

CREATE TABLE "kaspers"."type" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(64) UNIQUE NOT NULL
);

CREATE TABLE "kaspers"."type_attribute" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "type_id" bigint NOT NULL,
  "attribute_key" varchar(64) NOT NULL,
  "label" varchar(64) NOT NULL,
  "data_type" kaspers.attribute_data_type NOT NULL DEFAULT 'text',
  "is_required" boolean NOT NULL DEFAULT false,
  "sort_order" int NOT NULL DEFAULT 0
);

CREATE TABLE "kaspers"."category" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "title" varchar(64) NOT NULL,
  "parent_id" integer
);

CREATE TABLE "kaspers"."product_category" (
  "product_id" bigint NOT NULL,
  "category_id" integer NOT NULL,
  PRIMARY KEY ("product_id", "category_id")
);

CREATE TABLE "kaspers"."product" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "sku" varchar(12) UNIQUE,
  "name" varchar(120) NOT NULL,
  "type_id" bigint,
  "price" decimal(10,2) NOT NULL,
  "cost" decimal(10,2),
  "content" text NOT NULL,
  "status" kaspers.product_status NOT NULL DEFAULT 'active',
  "attributes" jsonb NOT NULL DEFAULT ('{}'),
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz,
  CONSTRAINT "chk_product_price_non_negative" CHECK (price >= 0),
  CONSTRAINT "chk_product_cost_non_negative" CHECK (cost IS NULL OR cost >= 0)
);

CREATE TABLE "kaspers"."product_image" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "product_id" bigint NOT NULL,
  "path_to_image" varchar(512) NOT NULL,
  "image_description" text NOT NULL,
  "is_primary" boolean NOT NULL DEFAULT false,
  "sort_order" int NOT NULL DEFAULT 0
);

CREATE TABLE "kaspers"."location" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(120) NOT NULL,
  "street" varchar(120) NOT NULL,
  "city" varchar(64) NOT NULL,
  "state" varchar(2) NOT NULL,
  "zip" varchar(10) NOT NULL,
  "phone_number" varchar(14) NOT NULL,
  "description" text,
  "updated_at" timestamptz
);

CREATE TABLE "kaspers"."product_inventory" (
  "product_id" bigint NOT NULL,
  "location_id" integer NOT NULL,
  "quantity" int NOT NULL DEFAULT 0,
  "updated_at" timestamptz,
  CONSTRAINT "chk_non_negative_quantity" CHECK (quantity >= 0),
  PRIMARY KEY ("product_id", "location_id")
);

CREATE TABLE "kaspers"."hours" (
  "id" integer PRIMARY KEY,
  "monday_open" time,
  "monday_close" time,
  "tuesday_open" time,
  "tuesday_close" time,
  "wednesday_open" time,
  "wednesday_close" time,
  "thursday_open" time,
  "thursday_close" time,
  "friday_open" time,
  "friday_close" time,
  "saturday_open" time,
  "saturday_close" time,
  "sunday_open" time,
  "sunday_close" time,
  CONSTRAINT "chk_valid_hours" CHECK ((monday_open IS NULL OR monday_close > monday_open) AND
    (tuesday_open IS NULL OR tuesday_close > tuesday_open) AND
    (wednesday_open IS NULL OR wednesday_close > wednesday_open) AND
    (thursday_open IS NULL OR thursday_close > thursday_open) AND
    (friday_open IS NULL OR friday_close > friday_open) AND
    (saturday_open IS NULL OR saturday_close > saturday_open) AND
    (sunday_open IS NULL OR sunday_close > sunday_open))
);

CREATE TABLE "kaspers"."admin_user" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "email" varchar(255) UNIQUE NOT NULL,
  "hashed_password" varchar(255) NOT NULL,
  "is_enabled" boolean NOT NULL DEFAULT true,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "kaspers"."newsletter_subscriber" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "email" varchar(255) UNIQUE NOT NULL,
  "is_subscribed" boolean NOT NULL DEFAULT true,
  "unsubscribe_token" uuid NOT NULL DEFAULT (gen_random_uuid()),
  "subscribed_at" timestamptz NOT NULL DEFAULT (now()),
  "unsubscribed_at" timestamptz
);

CREATE UNIQUE INDEX ON "kaspers"."type_attribute" ("type_id", "attribute_key");

CREATE UNIQUE INDEX ON "kaspers"."category" ("parent_id", "title");

CREATE INDEX ON "kaspers"."product" ("type_id");

CREATE INDEX ON "kaspers"."product" ("status");

CREATE INDEX ON "kaspers"."product" USING GIN ("attributes");

CREATE INDEX ON "kaspers"."product_image" ("product_id");

COMMENT ON TABLE "kaspers"."type" IS 'Single-valued. Drives which attribute fields a product shows.';

COMMENT ON COLUMN "kaspers"."type"."name" IS 'what a thing IS: paint, furniture, yarn, kiln supply';

COMMENT ON TABLE "kaspers"."type_attribute" IS 'Defines the form/spec fields per type. NOT EAV — values live in product.attributes.';

COMMENT ON COLUMN "kaspers"."type_attribute"."attribute_key" IS 'e.g. ''finish'', ''era'', ''fiber_weight''';

COMMENT ON COLUMN "kaspers"."type_attribute"."label" IS 'UI label, e.g. ''Paint Finish''';

COMMENT ON COLUMN "kaspers"."category"."parent_id" IS 'self-ref for nesting';

COMMENT ON COLUMN "kaspers"."product"."sku" IS 'stable code; nullable for one-off furniture';

COMMENT ON COLUMN "kaspers"."product"."type_id" IS 'drives attribute form';

COMMENT ON COLUMN "kaspers"."product"."cost" IS 'what she paid, for margin';

COMMENT ON COLUMN "kaspers"."product"."content" IS 'long description';

COMMENT ON COLUMN "kaspers"."product"."attributes" IS 'type-specific fields';

COMMENT ON COLUMN "kaspers"."product"."updated_at" IS 'maintained by trigger';

COMMENT ON COLUMN "kaspers"."product_image"."is_primary" IS 'the thumbnail; at-most-one true per product enforced by partial unique index (SQL only)';

COMMENT ON COLUMN "kaspers"."location"."updated_at" IS 'maintained by trigger';

COMMENT ON COLUMN "kaspers"."product_inventory"."quantity" IS 'stock of this product at this location';

COMMENT ON COLUMN "kaspers"."product_inventory"."updated_at" IS 'when stock last moved; maintained by trigger';

COMMENT ON TABLE "kaspers"."admin_user" IS 'Admin panel login only. Not public users.';

COMMENT ON COLUMN "kaspers"."admin_user"."email" IS 'case-insensitive uniqueness enforced by lower(email) index (SQL only)';

COMMENT ON COLUMN "kaspers"."admin_user"."hashed_password" IS 'BCrypt';

COMMENT ON COLUMN "kaspers"."newsletter_subscriber"."email" IS 'case-insensitive uniqueness enforced by lower(email) index (SQL only)';

COMMENT ON COLUMN "kaspers"."newsletter_subscriber"."is_subscribed" IS 'false = unsubscribed, row kept';

COMMENT ON COLUMN "kaspers"."newsletter_subscriber"."unsubscribe_token" IS 'for one-click unsubscribe links';

COMMENT ON COLUMN "kaspers"."newsletter_subscriber"."unsubscribed_at" IS 'set when they opt out';

ALTER TABLE "kaspers"."type_attribute" ADD FOREIGN KEY ("type_id") REFERENCES "kaspers"."type" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "kaspers"."category" ADD FOREIGN KEY ("parent_id") REFERENCES "kaspers"."category" ("id") ON DELETE SET NULL DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "kaspers"."product_category" ADD FOREIGN KEY ("product_id") REFERENCES "kaspers"."product" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "kaspers"."product_category" ADD FOREIGN KEY ("category_id") REFERENCES "kaspers"."category" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "kaspers"."product" ADD FOREIGN KEY ("type_id") REFERENCES "kaspers"."type" ("id") ON DELETE SET NULL DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "kaspers"."product_image" ADD FOREIGN KEY ("product_id") REFERENCES "kaspers"."product" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "kaspers"."product_inventory" ADD FOREIGN KEY ("product_id") REFERENCES "kaspers"."product" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "kaspers"."product_inventory" ADD FOREIGN KEY ("location_id") REFERENCES "kaspers"."location" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "kaspers"."hours" ADD FOREIGN KEY ("id") REFERENCES "kaspers"."location" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;
