Project Kaspers {
  database_type: 'PostgreSQL'
  Note: 'Kaspers Home Decor'
}

// ── Enums ────────────────────────────────────────────────
Enum kaspers.product_status {
  active
  sold
  discontinued
  archived
}

Enum kaspers.attribute_data_type {
  text
  number
  boolean
  date
}

// ── Type / attribute definitions ─────────────────────────
Table kaspers.type {
  id   bigint       [pk, increment]
  name varchar(64)  [not null, unique, note: 'what a thing IS: paint, furniture, yarn, kiln supply']

  Note: 'Single-valued. Drives which attribute fields a product shows.'
}

Table kaspers.type_attribute {
  id            bigint                       [pk, increment]
  type_id       bigint                       [not null]
  attribute_key varchar(64)                  [not null, note: "e.g. 'finish', 'era', 'fiber_weight'"]
  label         varchar(64)                  [not null, note: "UI label, e.g. 'Paint Finish'"]
  data_type     kaspers.attribute_data_type  [not null, default: 'text']
  is_required   boolean                      [not null, default: false]
  sort_order    int                          [not null, default: 0]

  indexes {
    (type_id, attribute_key) [unique]
  }

  Note: 'Defines the form/spec fields per type. NOT EAV — values live in product.attributes.'
}

// ── Categories (browse / merchandise, many-valued) ───────
Table kaspers.category {
  id        integer     [pk, increment]
  title     varchar(64) [not null]
  parent_id integer     [note: 'self-ref for nesting']

  indexes {
    (parent_id, title) [unique, note: 'no dup titles under the same parent']
  }
}

Table kaspers.product_category {
  product_id  bigint  [not null]
  category_id integer [not null]

  indexes {
    (product_id, category_id) [pk]
  }
}

// ── Products ─────────────────────────────────────────────
Table kaspers.product {
  id          bigint                  [pk, increment]
  sku         varchar(12)             [unique, note: 'stable code; nullable for one-off furniture']
  name        varchar(120)            [not null]
  type_id     bigint                  [note: 'drives attribute form']
  price       decimal(10,2)           [not null]
  cost        decimal(10,2)           [note: 'what she paid, for margin']
  content     text                    [not null, note: 'long description']
  status      kaspers.product_status  [not null, default: 'active']
  attributes  jsonb                   [not null, default: `'{}'`, note: 'type-specific fields']
  created_at  timestamptz             [not null, default: `now()`]
  updated_at  timestamptz             [note: 'maintained by trigger']

  indexes {
    type_id
    status
    attributes [type: gin]
  }

  checks {
    `price >= 0`               [name: 'chk_product_price_non_negative']
    `cost IS NULL OR cost >= 0` [name: 'chk_product_cost_non_negative']
  }
}

Table kaspers.product_image {
  id                integer      [pk, increment]
  product_id        bigint       [not null]
  path_to_image     varchar(512) [not null]
  image_description text         [not null]
  is_primary        boolean      [not null, default: false, note: 'the thumbnail; at-most-one true per product enforced by partial unique index (SQL only)']
  sort_order        int          [not null, default: 0]

  indexes {
    product_id
  }
}

// ── Locations, inventory, hours ──────────────────────────
Table kaspers.location {
  id           integer      [pk, increment]
  name         varchar(120) [not null]
  street       varchar(120) [not null]
  city         varchar(64)  [not null]
  state        varchar(2)   [not null]
  zip          varchar(10)  [not null]
  phone_number varchar(14)  [not null]
  description  text
  updated_at   timestamptz  [note: 'maintained by trigger']
}

Table kaspers.product_inventory {
  product_id  bigint      [not null]
  location_id integer     [not null]
  quantity    int         [not null, default: 0, note: 'stock of this product at this location']
  updated_at  timestamptz [note: 'when stock last moved; maintained by trigger']

  indexes {
    (product_id, location_id) [pk]
  }

  checks {
    `quantity >= 0` [name: 'chk_non_negative_quantity']
  }
}

Table kaspers.hours {
  id             integer [pk]
  monday_open    time
  monday_close   time
  tuesday_open   time
  tuesday_close  time
  wednesday_open time
  wednesday_close time
  thursday_open  time
  thursday_close time
  friday_open    time
  friday_close   time
  saturday_open  time
  saturday_close time
  sunday_open    time
  sunday_close   time

  checks {
    `(monday_open IS NULL OR monday_close > monday_open) AND
    (tuesday_open IS NULL OR tuesday_close > tuesday_open) AND
    (wednesday_open IS NULL OR wednesday_close > wednesday_open) AND
    (thursday_open IS NULL OR thursday_close > thursday_open) AND
    (friday_open IS NULL OR friday_close > friday_open) AND
    (saturday_open IS NULL OR saturday_close > saturday_open) AND
    (sunday_open IS NULL OR sunday_close > sunday_open)` [name: 'chk_valid_hours']
  }
}

// ── Admin auth (Spring Security) ─────────────────────────
Table kaspers.admin_user {
  id              bigint      [pk, increment]
  email           varchar(255) [not null, unique, note: 'case-insensitive uniqueness enforced by lower(email) index (SQL only)']
  hashed_password varchar(255) [not null, note: 'BCrypt']
  is_enabled      boolean     [not null, default: true]
  created_at      timestamptz [not null, default: `now()`]

  Note: 'Admin panel login only. Not public users.'
}

// ── Newsletter / product-update signups ──────────────────
Table kaspers.newsletter_subscriber {
  id                bigint       [pk, increment]
  email             varchar(255) [not null, unique, note: 'case-insensitive uniqueness enforced by lower(email) index (SQL only)']
  is_subscribed     boolean      [not null, default: true, note: 'false = unsubscribed, row kept']
  unsubscribe_token uuid         [not null, default: `gen_random_uuid()`, note: 'for one-click unsubscribe links']
  subscribed_at     timestamptz  [not null, default: `now()`]
  unsubscribed_at   timestamptz  [note: 'set when they opt out']
}

// ── References (with delete actions) ─────────────────────
Ref: kaspers.type_attribute.type_id > kaspers.type.id [delete: cascade]
Ref: kaspers.category.parent_id > kaspers.category.id [delete: set null]
Ref: kaspers.product_category.product_id > kaspers.product.id [delete: cascade]
Ref: kaspers.product_category.category_id > kaspers.category.id [delete: cascade]
Ref: kaspers.product.type_id > kaspers.type.id [delete: set null]
Ref: kaspers.product_image.product_id > kaspers.product.id [delete: cascade]
Ref: kaspers.product_inventory.product_id > kaspers.product.id [delete: cascade]
Ref: kaspers.product_inventory.location_id > kaspers.location.id [delete: cascade]
Ref: kaspers.location.id - kaspers.hours.id [delete: cascade]